--- a/POO-Catalogos/POO-Catalogos.csproj
+++ b/POO-Catalogos/POO-Catalogos.csproj
@@ -47,7 +47,7 @@
     <Compile Include="CatalogoFornecedor.cs" />
     <Compile Include="CatalogoInterno.cs" />
     <Compile Include="Interface\ICatalogoInterno.cs" />
-    <Compile Include="Interface\ITipoProduto.cs" />
+    <Compile Include="Interface\ITipoCatalogo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoCatalogo.cs" />
